--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,13 +2,17 @@ blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
+cmake==3.27.4.1
 Flask==2.3.3
-gunicorn==21.2.0
+Flask-Cors==4.0.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lxml==4.9.3
 MarkupSafe==2.1.3
-packaging==23.1
+pyodbc==4.0.39
+RateMyProfessorPyAPI==1.2.1
 requests==2.31.0
-urllib3==2.0.5
+typed-ast==1.5.5
+urllib3==2.0.4
 Werkzeug==2.3.7
