--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -35,7 +35,8 @@
             "resources": [
                 "content.styles.css",
                 "icon-128.png",
-                "icon-34.png"
+                "icon-34.png",
+                "src/assets/img/RateMyKU_Logo.png"
             ],
             "matches": []
         }
