--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,19 +2,19 @@ blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
-cmake==3.27.4.1
 Flask==2.3.3
 Flask-Cors==4.0.0
+Flask-SQLAlchemy==3.1.1
+gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-lxml==4.9.3
 MarkupSafe==2.1.3
-pyodbc==4.0.39
-RateMyProfessorPyAPI==1.2.1
-requests==2.31.0
-typed-ast==1.5.5
-urllib3==2.0.4
-Werkzeug==2.3.7
-gunicorn==21.2.0
 packaging==23.1
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+requests==2.31.0
+SQLAlchemy==2.0.21
+typing_extensions==4.8.0
+urllib3==2.0.5
+Werkzeug==2.3.7
