--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -20,6 +20,7 @@
         {
             "matches": [
                 "https://classes.ku.edu/*"
+
             ],
             "js": [
                 "contentScript.bundle.js"
@@ -44,7 +45,7 @@
         }
     ],
     "permissions": [
-        "tabs"
+        "tabs",
+        "storage"
     ]
-    
 }
