--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,10 +5,12 @@ click==8.1.7
 Flask==2.3.3
 Flask-Cors==4.0.0
 Flask-SQLAlchemy==3.1.1
+greenlet==3.0.0
 gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lxml==4.9.3
 MarkupSafe==2.1.3
 packaging==23.1
 psycopg2-binary==2.9.9
