Added comments and trying to fix bug Bug: Switch does not keep track on urls that are not classes.ku.edu

--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -19,7 +19,8 @@
     "content_scripts": [
         {
             "matches": [
-                "https://classes.ku.edu/*"
+                "https://classes.ku.edu/*",
+                "<all_urls>"
             ],
             "js": [
                 "contentScript.bundle.js"
