testing chart js implementation

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,7 +17,12 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "noEmit": false,
-        "jsx": "react"
+        "jsx": "react",
+        "sourceMap": true,
+        "rootDir": "src",
+        "outDir": "dist/js",
+        "noEmitOnError": true,
+        "typeRoots": [ "node_modules/@types" ]
     },
     "include": [
         "src"
