--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
     },
     "dependencies": {
+        "chart.js": "^4.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.18.0"
@@ -51,10 +52,10 @@
         "source-map-loader": "^3.0.1",
         "style-loader": "^3.3.1",
         "terser-webpack-plugin": "^5.3.6",
-        "ts-loader": "^9.4.2",
+        "ts-loader": "^9.5.0",
         "type-fest": "^3.5.2",
-        "typescript": "^4.9.4",
-        "webpack": "^5.75.0",
+        "typescript": "^4.9.5",
+        "webpack": "^5.89.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.11.1",
         "zip-webpack-plugin": "^4.0.1"
