--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -19,8 +19,7 @@
     "content_scripts": [
         {
             "matches": [
-                "https://classes.ku.edu/*",
-                "<all_urls>"
+                "https://classes.ku.edu/*"
             ],
             "js": [
                 "contentScript.bundle.js"
@@ -46,7 +45,6 @@
     ],
     "permissions": [
         "tabs",
-        "storage",
-        "<all_urls>"
+        "storage"
     ]
 }
