Add identity permission and sign in with Google functionality

--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -47,6 +47,7 @@
     "permissions": [
         "tabs",
         "storage",
-        "<all_urls>"
+        "<all_urls>",
+        "identity"
     ]
 }
